// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack utils js returns default values without any options 1`] = `
Object {
  "exclude": /core-js\\|event-source-polyfill\\|webpack-hot-middleware\\\\/client\\|source-map/,
  "test": /\\\\\\.\\(js\\|mjs\\|jsx\\)\\$/,
  "type": "javascript/auto",
  "use": Array [
    Object {
      "loader": "<PROJECT_ROOT>/packages/gatsby/src/utils/babel-loader.js",
      "options": Object {},
    },
  ],
}
`;

exports[`webpack utils js returns the correct exclude paths 1`] = `
Object {
  "exclude": /core-js\\|event-source-polyfill\\|webpack-hot-middleware\\\\/client\\|source-map\\|node_modules/,
  "test": /\\\\\\.\\(js\\|mjs\\|jsx\\)\\$/,
  "type": "javascript/auto",
  "use": Array [
    Object {
      "loader": "<PROJECT_ROOT>/packages/gatsby/src/utils/babel-loader.js",
      "options": Object {},
    },
  ],
}
`;
